--- a/_posts/2023-03-13-HTML_2.markdown
+++ b/_posts/2023-03-13-HTML_2.markdown
@@ -10,11 +10,11 @@ tag: [html, study]
 
 `<h1>제목</h1>`: 제목 표시 태그. h1 ~ h6까지 표현 가능
 
-`<p>단락</p>`: 단락 태그. 입력한 내용 압뒤로 빈 줄을 생성.
+`<p>단락</p>`: 단락 태그. 입력한 내용 앞뒤로 빈 줄을 생성.
 
-`<br>`: 줄바꿈 태그. 닫는 태그는 없다.
+`<br>`: 줄바꿈 태그.
 
-`<blockquote>`: 인용문 태그. 다른 텍스트보다 들여 써진다.
+`<blockquote>`: 인용문 태그. 다른 텍스트보다 들여써진다.
 
 `<strong>, <b>`: 볼드체 표시. 전자는 중요한 내용 강조, 후자는 단순 굵게 표시. 둘 사이에 문법 외의 차이가 있는가? 알아 볼 것.
 
@@ -34,6 +34,12 @@ tag: [html, study]
   <li>항목 2</li>
 </ol>
 ```
+
+<ol>
+  <li>항목 1</li>
+  <li>항목 2</li>
+</ol>
+
 `<ol type="1">`처럼 type으로 순서 목록의 숫자를 조정 가능하다. (1: 숫자, a: 소문자, A: 대문자, i: 로마소문자, I: 로마대문자)
 `<ol style="3">`처럼 start로 목록 시작 숫자를 조정할 수 있다.
 
@@ -49,6 +55,11 @@ tag: [html, study]
 </ul>
 ```
 
+<ul>
+  <li>항목 1</li>
+  <li>항목 2</li>
+</ul>
+
 ### **<dl>, <dt>, <dd>**
 ---
 
@@ -62,6 +73,13 @@ tag: [html, study]
   <dd>값2</dd>
 </dl>
 ```
+
+<dl>
+  <dt>이름1</dt>
+  <dd>값1</dd>
+  <dt>이름2</dt>
+  <dd>값2</dd>
+</dl>
 
 하나의 `<dt>`에 여러 개의 `<dd>` 값을 넣을 수 있다.
 
@@ -84,19 +102,33 @@ tag: [html, study]
 </table>    
 ```
 
-`<table>`: 표 전체
-`<caption>`: 표 제목
-`<tr>`: 행
-`<th>`: 제목 셀 (표 최상단)
-`<td>`: 일반 셀
+<table>
+  <caption>표 제목</caption>
+  <tr>
+    <th>제목 셀 1</th>
+    <th>제목 셀 2</th>
+    <th>제목 셀 3</th>
+  </tr>
+  <tr>
+    <td>항목 1-1</td>
+    <td>항목 1-2</td>
+    <td>항목 1-3</td>
+  </tr>
+</table>
+
+`<table>`: 표 전체<br>
+`<caption>`: 표 제목<br>
+`<tr>`: 행<br>
+`<th>`: 제목 셀<br>
+`<td>`: 일반 셀<br>
 
 ### **표 구조 정의**
-`<thead>`, `<tbody>`, `<tfoot>` 태그 사용
+`<thead>`, `<tbody>`, `<tfoot>` 태그 사용.<br>
+시각적 효과는 없지만, 화면 낭독기 등 편의성 증진에 사용되는 듯.
 
 ### **행 또는 열 합치기**
-`<td rowspan="합칠 셀 개수">셀 내용</td>`: 표기된 수 만큼 행 셀 병합
+`<td rowspan="합칠 셀 개수">셀 내용</td>`: 표기된 수 만큼 행 셀 병합<br>
 `<td colspan="합칠 셀 개수">셀 내용</td>`: 표기된 수 만큼 열 셀 병합
-``
 
 ### **기타**
 
@@ -149,10 +181,10 @@ tag: [html, study]
     border:1px solid #ccc;
     border-collapse: collapse;
   }
-  th, td { padding:10px 20px; }
 </style>
 ```
-`<head>` 부분에 위 코드를 넣어야 표에 격자 선이 생긴다. 자세히 알아볼 것.
+`<head>` 부분에 위 코드를 넣어야 표에 격자 선이 생긴다. 왜인지 알아볼 것.<br>
++ 표에 대한 `style`을 지정해 줘야 하는 것으로 확인.
 
 ## **이미지 삽입**
 ---
@@ -222,4 +254,5 @@ tag: [html, study]
 
 <a href="https://yycosmo.github.io">하이퍼링크 테스트</a>
 
-`target="blank"`로 지정하면 연결된 문서가 새 탭으로 열림.
+`target="blank"`로 지정하면 연결된 문서가 새 탭으로 열림.<br>
+`href`의 내용을 비워두면 <a href=" ">이렇게</a> 현재 페이지를 다시 연다.
