--- a/_posts/2023-03-13-HTML_1.markdown
+++ b/_posts/2023-03-13-HTML_1.markdown
@@ -32,10 +32,6 @@ tag: [html, study]
 
 `<body></body>`: 실제로 웹 브라우저 화면에 나타나는 내용
 
-`<h1>제목</h1>`: 제목 표시 태그. 숫자는 1~6까지
-
-`<p></p>`: 텍스트 단락. 입력 내용 앞뒤로 빈 줄 생성
-
 ## **세부 구조**
 ---
 
@@ -54,18 +50,19 @@ _시맨틱 태그: 의미가 있는 태그. 소스코드 구조 이해와 가독
 ### **<nav>**
 ---
 
-네비게이션 영역. id로 구분하여 문서 내에 여러 개 삽입 가능.<br>
+네비게이션 영역. 메뉴, 목차 등에 사용된다. id로 구분하여 문서 내에 여러 개 삽입 가능.<br>
 웹 문서 위치에 영향을 받지 않는다고 한다. 무슨 의미인지 알아 볼 것.
 
 ### **<main>**
 ---
 
-웹 문서의 **핵심 내용**.
+페이지의 주 콘텐츠 영역.
 
 ### **<article>**
 ---
 
-독립적인 웹 콘텐츠 항목을 담는다. 따로 떼어도 콘텐츠가 되는 내용.<br>
+독립적인 콘텐츠 항목을 담는다. 따로 떼어도 콘텐츠가 되는 내용.<br>
+sns 게시물이나 뉴스 기사, 댓글 등을 생각하면 된다.
 `<section>` 태그를 포함할 수 있다.
 
 ### **<section>**
@@ -77,7 +74,8 @@ css 적용을 위해 묶는 용도(`<div>` 태그)로 사용하지 말 것.
 ### **<aside>**
 ---
 
-본문 하, 좌, 우의 사이드바 영역.
+간접적으로 문서와 관련된 내용을 나타낸다.<br>
+사이드바에 사용.<br>
 
 ### **<footer>**
 ---
