--- a/_posts/2023-04-03-HTML_3.markdown
+++ b/_posts/2023-04-03-HTML_3.markdown
@@ -310,4 +310,4 @@ tag: [html, study]
 
 이런 식으로 예제 코드까지 작성하는 것은 어쩐지 시간 면에서 비효율적인 것 같다.<br>
 일단 1차 목표는 시험공부이기에, 그에 걸맞은 방식으로 공부하자. 당장 중간고사가 목전에 다가왔으니 더 이상 여유는 없다.<br>
-태그별 특징 사용처와 사용 방법 등 중요한 내용만 정리하는 것이 낫겠다. 솔직히 실전에서는 구글링으로 찾으면 될 테니까. 이걸 다 외울 생각으로 정리하는 건 아니잖아. 한 번씩 써 보고 이해하려고 하는 거니.<br>
+공부는 ppt 자료 위주로, 이 곳에는 필기하는 느낌으로 정리하자. 솔직히 실전에서는 구글링으로 찾으면 될 테니까. 이걸 다 외울 생각으로 정리하는 건 아니잖아. 한 번씩 써 보고 이해하려고 하는 거니.<br>
